better ui/ux for index.html

--- a/index.html
+++ b/index.html
@@ -18,109 +18,108 @@
   </head>
 
   <body>
+    <nav id="navbar" class="navbar">
+      <div class="navbar__container">
+        <a class="navbar__logo" href="index.html">Aditya</a>
+        <a class="navbar__hamberger-icon" onclick="toggleNavbar()">
+          <i class="fa fa-bars fa-2x"></i>
+        </a>
+      </div>
+
+      <ul id="navbarItems" class="navbar__items">
+        <li class="navbar__items-item">
+          <i class="fa-solid fa-house-chimney"></i>
+          <a href="index.html">Home</a>
+        </li>
+        <li class="navbar__items-item">
+          <i class="fa-solid fa-check"></i>
+          <a href="projects.html">Projects</a>
+        </li>
+        <li class="navbar__items-item">
+          <i class="fa-solid fa-circle-question"></i>
+          <a href="#">About</a>
+        </li>
+        <li class="navbar__items-item">
+          <i class="fa-solid fa-phone"></i>
+          <a href="#">Contact</a>
+        </li>
+        <button id="buttonChat" class="button">Let's chat</button>
+      </ul>
+
+
+      <button id="buttonArrowUp" class="button button-arrow button-arrow--up">
+        <i class="fa-solid fa-arrow-up"></i>
+      </button>
+
+      <button
+        id="buttonArrowDown"
+        class="button button-arrow button-arrow--down"
+      >
+        <i class="fa-solid fa-arrow-down"></i>
+      </button>
+    </nav>
+
     <section id="hero" class="hero">
-      <nav id="navbar" class="navbar">
-        <div class="navbar__container">
-          <a class="navbar__logo" href="index.html">Aditya</a>
-          <a class="navbar__hamberger_icon" onclick="toggleNavbar()">
-            <i class="fa fa-bars fa-2xl"></i>
-          </a>
+      <section id="heroIntroduction" class="hero__introduction">
+        <article class="hero__introduction-title">
+          <h1>
+            Hi! I am
+            <i class="fa-solid fa-code"></i>
+            <br />
+            Aditya Ramdonee
+          </h1>
+          <p>
+            My journey as a professional web developer started
+            <strong>1.5 years</strong> ago.
+          </p>
+        </article>
+        <div class="hero__introduction-options">
+          <button class="button">Hire Me</button>
+          <button
+            class="button button-large button-shadow button-view_projects"
+            onclick="viewProjects()"
+          >
+            Projects <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </button>
+        </div>
+        <article class="hero__introduction-info">
+          <div class="hero__introduction-info-item">
+            <h2>+4</h2>
+            <p class="text-sm">Companies I have worked for</p>
+          </div>
+          <div class="hero__introduction-info-item">
+            <h2>+1</h2>
+            <p>Projects completed</p>
+          </div>
+          <div class="hero__introduction-info-item">
+            <h2>Contact</h2>
+            <p>aramdonee16@gmail.com</p>
+          </div>
+        </article>
+      </section>
+
+      <section id="heroPortrait" class="hero__portrait">
+        <div class="hero__portrait-description">
+          <h2>Let's grow together</h2>
+          <p>
+            You wish to expand your business and bring in more revenue?
+            <br />
+            You are at the right place.
+          </p>
         </div>
 
-        <section id="navbarItems" class="navbar__items">
-          <ul>
-            <li>
-              <a href="index.html"
-                >Home<i class="fa-solid fa-house-chimney"></i
-              ></a>
-            </li>
-            <li>
-              <a href="projects.html"
-                >Projects<i class="fa-solid fa-list-check"></i
-              ></a>
-            </li>
-            <li>
-              <a href="#">About<i class="fa-solid fa-circle-question"></i></a>
-            </li>
-            <li>
-              <a href="#">Contact<i class="fa-solid fa-phone"></i></a>
-            </li>
-          </ul>
-
-          <button class="button button-medium">Let's chat</button>
-        </section>
-
-        <button id="buttonArrowUp" class="button button-arrow button-arrow-up">
-          <i class="fa-solid fa-arrow-up"></i>
-        </button>
-
-        <button
-          id="buttonArrowDown"
-          class="button button-arrow button-arrow-down"
-        >
-          <i class="fa-solid fa-arrow-down"></i>
-        </button>
-      </nav>
-      <section id="hero-flex" class="hero-flex">
-        <section id="heroIntroduction" class="hero__introduction">
-          <article class="hero__title">
-            <p class="text-xl">
-              Hi! I am 
-              <i class="fa-solid fa-code"></i> <br />
-            </p>
-            <p class="text-xxl">
-              Aditya Ramdonee
-            </p>
-            <p>
-              My journey as a professional web developer started
-              <strong>1.5 years</strong> ago.
-            </p>
-          </article>
-          <div class="hero__options">
-            <button class="button button-large button-shadow">Hire Me</button>
-            <button
-              class="button button-large button-shadow button-view_projects"
-              onclick="viewProjects()"
-            >
-              Projects <i class="fa-solid fa-arrow-up-right-from-square"></i>
-            </button>
-          </div>
-          <article class="hero__info">
-            <div>
-              <span class="text-xl">+4</span>
-              <p class="text-sm">Companies I have worked for</p>
-            </div>
-            <div>
-              <span class="text-xl">+1</span>
-              <p>Projects completed</p>
-            </div>
-            <div>
-              <span class="text-xl">Contact</span>
-              <p>aramdonee16@gmail.com</p>
-            </div>
-          </article>
-        </section>
-        <section id="heroPortrait" class="hero__portrait">
-          <div class="hero__portrait-description">
-            <span class="text-xxl">Let's grow together</span>
-            <p>
-              You wish to expand your business and bring in more revenue ?
-              <br />You are at the right place.
-            </p>
-          </div>
-
-          <div class="social-media">
-            <a href="#"><i class="fa-brands fa-github fa-2xl"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-          </div>
-        </section>
+        <div class="social-media">
+          <a href="#"><i class="fa-brands fa-github fa-2x"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+        </div>
       </section>
     </section>
+
     <section id="skills" class="skills">
-      <article class="skills__technical">
-        <span class="text-xl">Technical skills</span>
-        <ul class="skills__technical_list">
+      <article class="skills__item skills__item--technical">
+        <h2>Technical skills</h2>
+        <ul class="skills__list">
           <li>
             html
             <i class="fa-solid fa-face-smile"></i>
@@ -167,9 +166,10 @@
           </li>
         </ul>
       </article>
-      <article class="skills__soft">
-        <span class="text-xl">Soft skills</span>
-        <ul class="skills__soft_list">
+
+      <article class="skills__item skills__item--soft">
+        <h2>Soft skills</h2>
+        <ul class="skills__list">
           <li>
             Problem solving
             <i class="fa-solid fa-face-smile"></i>
