added logo and more responsiveness for desktop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav id="navbar" class="navbar">
       <div class="navbar__container">
-        <a class="navbar__logo" href="index.html">Aditya</a>
+        <a class="navbar__logo" href="index.html"></a>
         <a class="navbar__hamberger-icon" onclick="toggleNavbar()">
           <i class="fa fa-bars fa-2x"></i>
         </a>
@@ -84,15 +84,15 @@
         </div>
         <article class="hero__introduction-info">
           <div class="hero__introduction-info-item">
-            <h2>+4</h2>
+            <h3>+4</h3>
             <p class="text-sm">Companies I have worked for</p>
           </div>
           <div class="hero__introduction-info-item">
-            <h2>+1</h2>
+            <h3>+1</h3>
             <p>Projects completed</p>
           </div>
           <div class="hero__introduction-info-item">
-            <h2>Contact</h2>
+            <h3>Contact</h3>
             <p>aramdonee16@gmail.com</p>
           </div>
         </article>
@@ -119,7 +119,7 @@
     <section id="skills" class="skills">
       <article class="skills__item skills__item--technical">
         <h2>Technical skills</h2>
-        <ul class="skills__list">
+        <ul class="skills__item_list">
           <li>
             html
             <i class="fa-solid fa-face-smile"></i>
@@ -169,7 +169,7 @@
 
       <article class="skills__item skills__item--soft">
         <h2>Soft skills</h2>
-        <ul class="skills__list">
+        <ul class="skills__item_list">
           <li>
             Problem solving
             <i class="fa-solid fa-face-smile"></i>
