--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
   <body>
     <nav id="navbar" class="navbar">
       <div class="navbar__container">
-        <a class="navbar__logo" href="index.html">Aditya</a>
+        <a class="navbar__logo" href="index.html"></a>
         <a class="navbar__hamberger-icon" onclick="toggleNavbar()">
           <i class="fa fa-bars fa-2x"></i>
         </a>
@@ -44,42 +44,30 @@
         </li>
         <button id="buttonChat" class="button button-medium">Let's chat</button>
       </ul>
-
-
-      <button id="buttonArrowUp" class="button button-arrow button-arrow--up">
-        <i class="fa-solid fa-arrow-up"></i>
-      </button>
-
-      <button
-        id="buttonArrowDown"
-        class="button button-arrow button-arrow--down"
-      >
-        <i class="fa-solid fa-arrow-down"></i>
-      </button>
     </nav>
 
     <header id="bestProject" class="best_project">
       <article class="best_project__introduction">
-        <h1 class="text-xxl">My projects</h1>
+        <h1>My projects</h1>
         <p class="text-justify">
           Coding is my passion. I do it at work, in my free time, on weekends
-          and sometimes I even dream about code and sometimes I wake up with the
+          and sometimes I even dream about code <br> and sometimes I wake up with the
           solution I've been looking for.
         </p>
       </article>
       <section class="card">
-        <img class="card-image" src="assets/images/scenic-view-mauritius.jpg" />
-        <div>
-          <span class="text-xl">Some project</span>
+        <img class="card-image" src="assets/images/portfolio.png" />
+        <div class="card-description">
+          <h3>Some project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, quod?
           </p>
         </div>
         <div class="card-options">
-          <button class="button button-medium">
+          <button class="button button-card">
             GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
-          <button class="button button-medium">
+          <button class="button button-card">
             View live <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
         </div>
@@ -87,40 +75,57 @@
     </header>
 
     <div class="separator">
-      <p class="separator__title text-xl">Explore more!</p>
+      <h2 class="separator__title">Explore more!</h2>
     </div>
 
     <section id="projects" class="projects">
       <section class="card">
-        <img class="card-image" src="assets/images/scenic-view-mauritius.jpg" />
-        <div>
-          <span class="text-xl">Some project</span>
+        <img class="card-image" src="assets/images/portfolio.png" />
+        <div class="card-description">
+          <h3>Some project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, quod?
           </p>
         </div>
         <div class="card-options">
-          <button class="button button-medium">
+          <button class="button button-card">
             GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
-          <button class="button button-medium">
+          <button class="button button-card">
             View live <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
         </div>
       </section>
       <section class="card">
-        <img class="card-image" src="assets/images/scenic-view-mauritius.jpg" />
-        <div>
-          <span class="text-xl">Some project</span>
+        <img class="card-image" src="assets/images/portfolio.png" />
+        <div class="card-description">
+          <h3>Some project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, quod?
           </p>
         </div>
         <div class="card-options">
-          <button class="button button-medium">
+          <button class="button button-card">
             GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
-          <button class="button button-medium">
+          <button class="button button-card">
+            View live <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </button>
+        </div>
+      </section>
+      <section class="card">
+        <img class="card-image" src="assets/images/portfolio.png" />
+        <div class="card-description">
+          <h3>Some project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, quod?
+          </p>
+        </div>
+        <div class="card-options">
+          <button class="button button-card">
+            GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </button>
+          <button class="button button-card">
             View live <i class="fa-solid fa-arrow-up-right-from-square"></i>
           </button>
         </div>
